--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header-bar">
         <div class="app-title"><i class="fas fa-shield-halved"></i> CryptoMsg <small style="font-size:0.6em; opacity:0.7; margin-right:5px;">Pro</small></div>
         <div class="version-badge" onclick="updateApp()">
-            <i class="fas fa-sync-alt"></i> نسخه 4.0 (هسته جدید)
+            <i class="fas fa-sync-alt"></i> نسخه 4.1 (بروزرسانی)
         </div>
     </div>
 
