--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+حق با شماست. در نسخه ۴.۰ به دلیل تمرکز روی تغییرات فنی، بخش راهنما کمی خلاصه شده بود که برای کاربران غیرمتخصص گیج‌کننده است.
+
+من بخش `info-container` را در فایل `index.html` بازنویسی کردم. در این نسخه جدید:
+
+1. **راهنمای قدم‌به‌قدم** (همراه با مثال) برای کاربران عادی برگشته است.
+2. **توصیه‌های امنیتی حیاتی** (مثل خطر کیبوردها و کلیپ‌بورد) که حذف شده بود، دوباره اضافه شد.
+3. بخش **شفافیت فنی** هم با اطلاعات جدید (AES-GCM) هماهنگ مانده است.
+
+این کد را جایگزین **کل فایل `index.html**` کنید:
+
+```html
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 <head>
@@ -23,7 +34,7 @@
     <div class="header-bar">
         <div class="app-title"><i class="fas fa-shield-halved"></i> CryptoMsg <small style="font-size:0.6em; opacity:0.7; margin-right:5px;">Pro</small></div>
         <div class="version-badge" onclick="updateApp()">
-            <i class="fas fa-sync-alt"></i> نسخه 4.1 (بروزرسانی)
+            <i class="fas fa-sync-alt"></i> نسخه 4.2 (بروزرسانی)
         </div>
     </div>
 
@@ -39,10 +50,10 @@
             <div class="form-group">
                 <label><i class="fas fa-layer-group"></i> روش مخفی‌سازی:</label>
                 <select id="encodingMode" onchange="toggleCoverInput()">
-                    <option value="base64">استاندارد (Base64)</option>
-                    <option value="farsiChars">حروف تصادفی فارسی</option>
-                    <option value="farsiWords">جملات واقعی فارسی</option>
+                    <option value="base64">استاندارد (Base64) - کپی راحت</option>
+                    <option value="farsiChars">حروف تصادفی فارسی (مناسب پیامک)</option>
                     <option value="invisible">متن نامرئی / Steganography ✨</option>
+                    <option value="farsiWords">جملات واقعی فارسی (طبیعی)</option>
                     <option value="russian">حروف روسی (ضد فیلتر)</option>
                     <option value="emoji">ایموجی‌ها (😂😎🚀)</option>
                     <option value="chinese">کاراکترهای چینی</option>
@@ -107,34 +118,67 @@
     <div class="info-container">
         
         <details>
-            <summary><i class="fas fa-book-open" style="color: var(--primary);"></i> راهنمای سریع</summary>
+            <summary><i class="fas fa-book-open" style="color: var(--primary);"></i> راهنمای ساده (چطور کار کنم؟)</summary>
             <div class="info-content">
-                <p><strong>نسخه ۴.۰ (انقلاب امنیتی):</strong> ما هسته برنامه را کاملاً تغییر دادیم. حالا از استاندارد مرورگر (Web Crypto API) استفاده می‌شود که بسیار امن‌تر است.</p>
-                <p><strong>ارسال:</strong> متن و رمز را بنویسید، دکمه تولید را بزنید. خروجی حالا شامل "نمک" و "بردار" امنیتی است که به صورت خودکار مدیریت می‌شود.</p>
+                <h4 style="margin-top:0; color:var(--text);">📤 برای ارسال پیام:</h4>
+                <ol style="padding-right: 20px; margin-bottom: 15px;">
+                    <li><strong>نوشتن:</strong> پیام محرمانه خود را در کادر بنویسید.</li>
+                    <li><strong>رمزگذاری:</strong> یک رمز عبور قوی انتخاب کنید (این رمز را باید به گیرنده هم بگویید).</li>
+                    <li><strong>انتخاب ظاهر:</strong>
+                        <ul>
+                            <li><small>🔹 <strong>استاندارد:</strong> برای کپی راحت در تلگرام/واتساپ.</small></li>
+                            <li><small>🔹 <strong>متن نامرئی:</strong> اگر می‌خواهید پیام در توییتر/اینستاگرام دیده نشود.</small></li>
+                        </ul>
+                    </li>
+                    <li><strong>ارسال:</strong> دکمه "تولید پیام" را بزنید، متن عجیب تولید شده را کپی کنید و بفرستید.</li>
+                </ol>
+
+                <h4 style="color:var(--text);">📥 برای خواندن پیام:</h4>
+                <ol style="padding-right: 20px;">
+                    <li>روی دکمه <strong>"دریافت (رمزگشایی)"</strong> در بالای صفحه کلیک کنید.</li>
+                    <li>متن رمز شده‌ای که دریافت کرده‌اید را در کادر وارد کنید.</li>
+                    <li>همان رمز عبوری که فرستنده گذاشته بود را بزنید تا پیام باز شود.</li>
+                </ol>
             </div>
         </details>
 
         <details>
-            <summary><i class="fas fa-shield-alt" style="color: var(--warning);"></i> نکات امنیتی نسخه ۴</summary>
+            <summary><i class="fas fa-shield-alt" style="color: var(--warning);"></i> نکات مهم امنیتی (حتما بخوانید)</summary>
             <div class="info-content">
-                <ul>
-                    <li>✅ <strong>ضد دستکاری (Tamper Proof):</strong> اگر حتی یک حرف از پیام رمز شده تغییر کند، رمزگشایی انجام نمی‌شود (AES-GCM).</li>
-                    <li>✅ <strong>ضد بروت‌فورس:</strong> رمز عبور شما ۱۰۰،۰۰۰ بار در هم آمیخته می‌شود تا هک کردن آن زمان‌بر شود (PBKDF2).</li>
-                    <li>🚫 <strong>رمزهای قدیمی:</strong> پیام‌هایی که با نسخه‌های قبلی (۱ تا ۳) رمز شده‌اند، با این نسخه باز نمی‌شوند (چون امنیتشان پایین بود).</li>
+                <ul style="list-style-type: none; padding: 0;">
+                    <li style="margin-bottom: 10px;">
+                        🚫 <strong>رمز را جداگانه بفرستید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">هرگز رمز عبور را در همان پیامی که متن رمز شده را می‌فرستید، قرار ندهید. (مثلاً متن را در واتساپ بفرستید و رمز را تلفنی بگویید).</span>
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        ⌨️ <strong>مراقب کیبوردها باشید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">کیبوردهای گوشی کلمات شما را یاد می‌گیرند. برای امنیت ۱۰۰٪، از کیبوردهای امن یا حالت Incognito مرورگر استفاده کنید.</span>
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        📋 <strong>حافظه کپی را پاک کنید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">بعد از اینکه پیام را کپی و ارسال کردید، یک متن الکی دیگر کپی کنید تا پیام اصلی از حافظه گوشی (Clipboard) پاک شود.</span>
+                    </li>
+                    <li style="margin-bottom: 10px;">
+                        ⚠️ <strong>فراموشی رمز = نابودی پیام:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">چون ما هیچ سروری نداریم، اگر رمز عبور را فراموش کنید، هیچ راهی برای بازگرداندن پیام وجود ندارد.</span>
+                    </li>
                 </ul>
             </div>
         </details>
 
         <details open>
-            <summary><i class="fas fa-code" style="color: var(--success);"></i> شفافیت فنی</summary>
+            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه ۴.۰)</summary>
             <div class="info-content">
-                <p><strong>مشخصات فنی نسخه ۴.۰:</strong></p>
-                <ul style="font-size: 0.85rem; direction: ltr; text-align: left;">
-                    <li><strong>Algorithm:</strong> AES-GCM (256-bit)</li>
-                    <li><strong>Key Derivation:</strong> PBKDF2-SHA256 (100,000 Iterations)</li>
-                    <li><strong>Salt & IV:</strong> Randomly generated for every message</li>
-                    <li><strong>Library:</strong> Native Web Crypto API (No 3rd party scripts)</li>
-                </ul>
+                <p><strong>امنیت هسته جدید (Web Crypto API):</strong></p>
+                <p style="text-align: justify; font-size: 0.85rem;">
+                    در این نسخه، ما از موتور رمزنگاری داخلی مرورگر استفاده می‌کنیم که سریع‌تر و امن‌تر است.
+                    <br><br>
+                    🔹 <strong>الگوریتم:</strong> AES-GCM (256-bit) - این الگوریتم اگر پیام در طول مسیر حتی یک نقطه تغییر کرده باشد، آن را باز نمی‌کند (ضد دستکاری).
+                    <br>
+                    🔹 <strong>کلیدسازی:</strong> PBKDF2 با ۱۰۰,۰۰۰ بار تکرار و Salt تصادفی (ضد حملات هکری).
+                    <br>
+                    🔹 <strong>بدون سرور:</strong> تمام عملیات در گوشی شما انجام می‌شود.
+                </p>
             </div>
         </details>
     </div>
@@ -142,3 +186,5 @@
     <script src="assets/js/app.js"></script>
 </body>
 </html>
+
+```
