--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header-bar">
         <div class="app-title"><i class="fas fa-shield-halved"></i> CryptoMsg <small style="font-size:0.6em; opacity:0.7; margin-right:5px;">Pro</small></div>
         <div class="version-badge" onclick="updateApp()">
-            <i class="fas fa-sync-alt"></i> نسخه 4.3 (بروزرسانی)
+            <i class="fas fa-sync-alt"></i> نسخه ۴.۴ (بروزرسانی)
         </div>
     </div>
 
@@ -155,8 +155,8 @@
             </div>
         </details>
 
-        <details open>
-            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه ۴.۰)</summary>
+        <details>
+            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه ۴.۴)</summary>
             <div class="info-content">
                 <p><strong>امنیت هسته جدید (Web Crypto API):</strong></p>
                 <p style="text-align: justify; font-size: 0.85rem;">
@@ -170,10 +170,30 @@
                 </p>
             </div>
         </details>
+
+        <details>
+            <summary><i class="fas fa-scale-balanced" style="color: var(--danger);"></i> شرایط استفاده و سلب مسئولیت</summary>
+            <div class="info-content">
+                <p style="margin-top: 0;">این نرم‌افزار یک پروژه <strong>متن‌باز (Open Source)</strong> است که با هدف ارتقای حریم خصوصی توسعه یافته است.</p>
+                
+                <ul style="list-style-type: none; padding: 0;">
+                    <li style="margin-bottom: 12px;">
+                        📵 <strong>هیچ سروری وجود ندارد:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">تمام عملیات رمزنگاری در دستگاه شما انجام می‌شود. ما هیچ دسترسی‌ای به پیام‌ها، رمزها یا اطلاعات شما نداریم.</span>
+                    </li>
+                    <li style="margin-bottom: 12px;">
+                        🔥 <strong>غیرقابل بازگشت:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">اگر رمز عبور خود را فراموش کنید، پیام شما برای همیشه از دست رفته است. هیچ راهی (تکرار می‌کنیم: هیچ راهی) برای بازیابی وجود ندارد.</span>
+                    </li>
+                    <li style="margin-bottom: 5px;">
+                        ⚖️ <strong>مسئولیت کاربر:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">مسئولیت حفظ رمز عبور و همچنین محتوای پیام‌های تبادل شده، تماماً بر عهده کاربر است. سازنده هیچ مسئولیتی در قبال استفاده نادرست یا از دست رفتن اطلاعات ندارد.</span>
+                    </li>
+                </ul>
+            </div>
+        </details>
     </div>
 
     <script src="assets/js/app.js"></script>
 </body>
 </html>
-
-```
