--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="header-bar">
         <div class="app-title"><i class="fas fa-shield-halved"></i> CryptoMsg <small style="font-size:0.6em; opacity:0.7; margin-right:5px;">Ultimate</small></div>
         <div class="version-badge" onclick="updateApp()">
-            <i class="fas fa-sync-alt"></i> نسخه 4.5 (Full)
+            <i class="fas fa-sync-alt"></i> نسخه 4.6 (بروزرسانی)
         </div>
     </div>
 
@@ -113,33 +113,100 @@
     <div class="info-container">
         
         <details>
-            <summary><i class="fas fa-book-open" style="color: var(--primary);"></i> راهنمای انتخاب روش‌ها</summary>
+            <summary><i class="fas fa-book-open" style="color: var(--primary);"></i> راهنمای ساده (چطور کار کنم؟)</summary>
+            <div class="info-content">
+                <h4 style="margin-top:0; color:var(--text);">📤 برای ارسال پیام:</h4>
+                <ol style="padding-right: 20px; margin-bottom: 15px;">
+                    <li><strong>نوشتن:</strong> پیام محرمانه خود را در کادر بنویسید.</li>
+                    <li><strong>رمزگذاری:</strong> یک رمز عبور قوی انتخاب کنید (این رمز را باید به گیرنده هم بگویید).</li>
+                    <li><strong>انتخاب ظاهر:</strong>
+                        <ul>
+                            <li><small>🔹 <strong>استاندارد:</strong> برای کپی راحت در تلگرام/واتساپ.</small></li>
+                            <li><small>🔹 <strong>متن نامرئی:</strong> اگر می‌خواهید پیام در توییتر/اینستاگرام دیده نشود.</small></li>
+                        </ul>
+                    </li>
+                    <li><strong>ارسال:</strong> دکمه "تولید پیام" را بزنید، متن عجیب تولید شده را کپی کنید و بفرستید.</li>
+                </ol>
+
+                <h4 style="color:var(--text);">📥 برای خواندن پیام:</h4>
+                <ol style="padding-right: 20px;">
+                    <li>روی دکمه <strong>"دریافت (رمزگشایی)"</strong> در بالای صفحه کلیک کنید.</li>
+                    <li>متن رمز شده‌ای که دریافت کرده‌اید را در کادر وارد کنید.</li>
+                    <li>همان رمز عبوری که فرستنده گذاشته بود را بزنید تا پیام باز شود.</li>
+                </ol>
+            </div>
+        </details>
+
+        <details>
+            <summary><i class="fas fa-shield-alt" style="color: var(--danger);"></i> نکات مهم امنیتی (حتما بخوانید)</summary>
+            <div class="info-content">
+                <ul style="list-style-type: none; padding: 0;">
+                    <li style="margin-bottom: 12px;">
+                        🚫 <strong>رمز را جداگانه بفرستید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">هرگز رمز عبور را در همان پیامی که متن رمز شده را می‌فرستید، قرار ندهید. (مثلاً متن را در واتساپ بفرستید و رمز را تلفنی بگویید).</span>
+                    </li>
+                    <li style="margin-bottom: 12px;">
+                        ⌨️ <strong>مراقب کیبوردها باشید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">کیبوردهای گوشی کلمات شما را یاد می‌گیرند. برای امنیت ۱۰۰٪، از کیبوردهای امن یا حالت Incognito مرورگر استفاده کنید.</span>
+                    </li>
+                    <li style="margin-bottom: 12px;">
+                        📋 <strong>حافظه کپی را پاک کنید:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">بعد از اینکه پیام را کپی و ارسال کردید، یک متن الکی دیگر کپی کنید تا پیام اصلی از حافظه گوشی (Clipboard) پاک شود.</span>
+                    </li>
+                    <li style="margin-bottom: 5px;">
+                        ⚠️ <strong>فراموشی رمز = نابودی پیام:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">چون ما هیچ سروری نداریم، اگر رمز عبور را فراموش کنید، هیچ راهی برای بازگرداندن پیام وجود ندارد.</span>
+                    </li>
+                </ul>
+            </div>
+        </details>
+
+        <details>
+            <summary><i class="fas fa-layer-group" style="color: var(--warning);"></i> راهنمای انتخاب روش‌ها</summary>
             <div class="info-content">
                 <ul>
                     <li><strong>حروف تصادفی فارسی:</strong> بهترین گزینه برای <span style="color:var(--success)">SMS</span> (چون اپراتورها حساس نیستند).</li>
                     <li><strong>متن نامرئی:</strong> مخصوص <span style="color:var(--secondary)">اینستاگرام و توییتر</span>. پیام کاملاً ناپدید می‌شود (داخل یک متن عادی).</li>
                     <li><strong>جملات فارسی:</strong> تبدیل به کلمات معنی‌دار (مثل "سیب درخت آسمان"). بسیار طبیعی برای ربات‌های فیلترینگ.</li>
                     <li><strong>حروف روسی/چینی:</strong> برای گیج کردن الگوریتم‌های هوش مصنوعی که دنبال کلمات فارسی یا انگلیسی می‌گردند.</li>
-                    <li><strong>استاندارد (Base64):</strong> فقط برای کپی در فایل متنی یا جایی که ظاهر مهم نیست.</li>
                 </ul>
             </div>
         </details>
 
         <details>
-            <summary><i class="fas fa-shield-alt" style="color: var(--danger);"></i> هشدارهای امنیتی (مهم)</summary>
+            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه ۴.۵)</summary>
             <div class="info-content">
+                <p><strong>امنیت هسته جدید (Web Crypto API):</strong></p>
+                <p style="text-align: justify; font-size: 0.85rem;">
+                    در این نسخه، ما از موتور رمزنگاری داخلی مرورگر استفاده می‌کنیم که سریع‌تر و امن‌تر است.
+                    <br><br>
+                    🔹 <strong>الگوریتم:</strong> AES-GCM (256-bit) - این الگوریتم اگر پیام در طول مسیر حتی یک نقطه تغییر کرده باشد، آن را باز نمی‌کند (ضد دستکاری).
+                    <br>
+                    🔹 <strong>کلیدسازی:</strong> PBKDF2 با ۱۰۰,۰۰۰ بار تکرار و Salt تصادفی (ضد حملات هکری).
+                    <br>
+                    🔹 <strong>بدون سرور:</strong> تمام عملیات در گوشی شما انجام می‌شود.
+                </p>
+            </div>
+        </details>
+
+        <details>
+            <summary><i class="fas fa-scale-balanced" style="color: var(--text-muted);"></i> شرایط استفاده و سلب مسئولیت</summary>
+            <div class="info-content">
+                <p style="margin-top: 0;">این نرم‌افزار یک پروژه <strong>متن‌باز (Open Source)</strong> است که با هدف ارتقای حریم خصوصی توسعه یافته است.</p>
                 <ul style="list-style-type: none; padding: 0;">
-                    <li style="margin-bottom: 10px;">🚫 <strong>فراموشی رمز:</strong> مساوی است با از دست رفتن همیشگی اطلاعات. ما هیچ نسخه‌ای نداریم.</li>
-                    <li style="margin-bottom: 10px;">⌨️ <strong>کیبورد:</strong> از کیبورد امن (Incognito) یا Gboard در حالت ناشناس استفاده کنید تا کلمات ذخیره نشوند.</li>
-                    <li>📋 <strong>کلیپ‌بورد:</strong> پس از ارسال، حافظه کپی گوشی را با کپی کردن یک متن دیگر پاک کنید.</li>
+                    <li style="margin-bottom: 12px;">
+                        📵 <strong>هیچ سروری وجود ندارد:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">تمام عملیات رمزنگاری در دستگاه شما انجام می‌شود. ما هیچ دسترسی‌ای به پیام‌ها، رمزها یا اطلاعات شما نداریم.</span>
+                    </li>
+                    <li style="margin-bottom: 12px;">
+                        🔥 <strong>غیرقابل بازگشت:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">اگر رمز عبور خود را فراموش کنید، پیام شما برای همیشه از دست رفته است. هیچ راهی (تکرار می‌کنیم: هیچ راهی) برای بازیابی وجود ندارد.</span>
+                    </li>
+                    <li style="margin-bottom: 5px;">
+                        ⚖️ <strong>مسئولیت کاربر:</strong> <br>
+                        <span style="font-size: 0.85rem; color: #94a3b8;">مسئولیت حفظ رمز عبور و همچنین محتوای پیام‌های تبادل شده، تماماً بر عهده کاربر است. سازنده هیچ مسئولیتی در قبال استفاده نادرست یا از دست رفتن اطلاعات ندارد.</span>
+                    </li>
                 </ul>
-            </div>
-        </details>
-
-        <details>
-            <summary><i class="fas fa-scale-balanced" style="color: var(--text-muted);"></i> سلب مسئولیت</summary>
-            <div class="info-content">
-                <p>این برنامه هیچ سروری ندارد و تمام عملیات در مرورگر شما انجام می‌شود. مسئولیت حفظ رمز عبور و محتوای پیام‌ها کاملاً بر عهده کاربر است.</p>
             </div>
         </details>
     </div>
