--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
 
         <button id="actionBtn" class="btn-main btn-enc" onclick="process()">
-            <i class="fas fa-lock"></i> اجرای عملیات امنیتی
+            <i class="fas fa-lock"></i> رمزنگاری پیام
         </button>
 
         <div id="resultArea" class="result-container">
@@ -174,7 +174,7 @@
         </details>
 
         <details>
-            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه ۴.۵)</summary>
+            <summary><i class="fas fa-code" style="color: var(--success);"></i> مشخصات فنی (نسخه 4.6)</summary>
             <div class="info-content">
                 <p><strong>امنیت هسته جدید (Web Crypto API):</strong></p>
                 <p style="text-align: justify; font-size: 0.85rem;">
